# LinuxApplicationDevelopment2025

01_TerminalProject/: Makefile  Show.c  test.txt
02_Multifile/: Makefile  prog.c
03_Text/: calendar.txt  randomize.sh
04_Debugging/: Makefile  gdb1.gdb  gdb2.gdb  ground_truth1.txt  ground_truth2.txt  range.c
05_Regexps/: Makefile  main.c
06_Tracing/: Makefile  move.c  protect.c  test.txt
07_Environmental/: Makefile.am  configure.ac  rhasher.c
07_Environmental/tests/: test_1.sh  test_2.sh  test_3.sh
08_I18n/: configure.ac
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_PatchDiff/: 0001-Define-size.patch  0002-Define-cells.patch  0003-Define-seed.patch  Makefile  lab.c
10_LibTesting/: Makefile.am  configure.ac
10_LibTesting/src/: Makefile.am  buf.c  buf.h
10_LibTesting/tests/: Makefile.am  tests.c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: ru.po
11_Documenting/src/: guess.c
12_InstallPackaging/: Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/po/: ru.po
12_InstallPackaging/src/: Makefile.am  guess.c  roman_converter.c  roman_converter.h
12_InstallPackaging/tests/: Makefile.am  tests.c
